fix page title align in print.css. other tweaks.
Change print.css:
 - page title left: -10px
 - tuck caption up under image (no white border)
 - remove background colors

--- a/print.css
+++ b/print.css
@@ -1,11 +1,14 @@
 div#content {
   margin-top: 0;
+  padding-bottom: 0;
+  background-color: transparent;
 }
 h1, h2, div#header, div#card {
   color: #000000;
 }
 nav {
   position: relative;
+  background-color: transparent;
 }
 nav a {
   display: none;
@@ -13,7 +16,10 @@ nav a {
 nav strong {
   position: absolute;
   top: 0;
-  left: 0;
+  left: -10px;
   font-size: 2em;
   color: #000000;
+}
+figure img {
+  border-style: none;
 }
